add another review bug fixed

--- a/Views/Search/Index.cshtml
+++ b/Views/Search/Index.cshtml
@@ -1,9 +1,9 @@
 @model BookCave.Models.InputModels.SearchInputModel;
 
 <div class="col-lg-8 col-md-12 offset-lg-2 wow fadeIn mb-5 container body-container">
-    <div class="card card-cascade wider">
-        <div class="view gradient-card-header blue-gradient p-3">
-            <h4 class="h2 mb-0">Search</h4>
+    <div class="card">
+        <div class="view p-5">
+            <h1 class="h2 mb-0 display-3 text-center"><strong>Search</strong></h1>
         </div>
         <div class="card-body">
             <form method="Get" asp-action="Results">
