--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,22 @@
-﻿<!--Carousel Wrapper-->
+﻿@model BookCave.Models.ViewModels.AccountViewModel
+
+@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+@using BookCave.Models
+
+@inject UserManager<ApplicationUser> UserManager
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
+
+<!--Carousel Wrapper-->
 <div id="carousel-example-1z" class="carousel slide carousel-fade animated fadeIn" data-ride="carousel">
 
     <!--Indicators-->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
     </ol>
     <!--/.Indicators-->
 
@@ -48,19 +59,20 @@
             <div class="view" style="background-image: url('https://cdn.aarp.net/content/dam/aarp/money/budgeting_savings/2016/04/1140-yeager-sell-your-used-books.imgcache.rev6feda141288df73e8fd100822bb375ea.web.652.375.jpg'); background-repeat: no-repeat; background-size: cover;">
 
                 <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center front-page-carousel">
 
                     <!-- Content -->
                     <div class="text-center white-text mx-5 wow fadeIn">
                         <h1 class="mb-4">
-                            <strong>Top Sellers!</strong>
+                            <a asp-controller="Book" asp-action="Top10"><strong>Top 10 Books!</strong></a>
                         </h1>
 
                         <p>
-                            <strong>See our list of top sold books!</strong>
+                            <a asp-controller="Book" asp-action="Top10"><strong>Basted on ratings from users</strong></a>
                         </p>
 
                         <p class="mb-4 d-none d-md-block">
+                            <a asp-controller="Book" asp-action="Top10" class="btn btn-light-blue">Go to Top 10</a>
                         </p>
 
                     </div>
@@ -72,33 +84,6 @@
             </div>
         </div>
         <!--/Second slide-->
-
-        <!--Third slide-->
-        <div class="carousel-item">
-            <div class="view" style="background-image: url('http://www.inthestreets.tv/wp-content/uploads/2014/01/HOT-NEW-RELEASE-FLAT.jpg'); background-repeat: no-repeat; background-size: cover;">
-
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong>Newest releases!</strong>
-                        </h1>
-
-                        <p>
-                            <strong>BSee our most new books</strong>
-                        </p>
-
-                    </div>
-                    <!-- Content -->
-
-                </div>
-                <!-- Mask & flexbox options-->
-
-            </div>
-        </div>
-        <!--/Third slide-->
 
     </div>
     <!--/.Slides-->
@@ -122,21 +107,23 @@
 
         <div class="row mt-5 wow fadeIn">
             <!-- Card -->
-            <div class="col">
-                <div class="card">
+            <div class="col align-items-stretch d-flex">
+                <div class="card align-items-stretch d-flex">
 
                     <!-- Card image -->
-                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                    <a asp-controller="Search" asp-action="Results"><img width="100rem" height="160rem" class="card-img-top" src="https://cdn-images-1.medium.com/max/1024/1*YLlZ96J3p8GFkIh1USVMzg.jpeg" alt="Card image cap"></a>
 
                     <!-- Card content -->
-                    <div class="card-body">
+                    <div class="card-body text-center">
 
                         <!-- Title -->
                         <h4 class="card-title"><a>View all books</a></h4>
                         <!-- Text -->
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Don't know where to begin? See our complete library collection!</p>
                         <!-- Button -->
-                        <a href="#" class="btn btn-primary">Button</a>
+                        <div class="row justify-content-center">
+                            <a asp-controller="Search" asp-action="Results" class="btn btn-primary">View all books</a>
+                        </div>
 
                     </div>
 
@@ -144,22 +131,24 @@
                 <!-- Card -->
             </div>
 
-            <div class="col">
+            <div class="col align-items-stretch d-flex">
                 <!-- Card 2 -->
-                <div class="card">
+                <div class="card align-items-stretch d-flex">
 
                     <!-- Card image -->
-                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                    <a asp-controller="Search" asp-action="Index"><img width="100rem" height="160rem" class="card-img-top" src="https://www.usedbookbusiness.com/wp-content/uploads/2012/03/Book-finder.jpg" alt="Card image cap"></a>
 
                     <!-- Card content -->
-                    <div class="card-body">
+                    <div class="card-body text-center">
 
                         <!-- Title -->
                         <h4 class="card-title"><a>Search Books</a></h4>
                         <!-- Text -->
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">What are you looking for? Try searching our cave of books!</p>
                         <!-- Button -->
-                        <a href="#" class="btn btn-primary">Button</a>
+                        <div class="row justify-content-center">
+                            <a asp-controller="Search" asp-action="Index" class="btn btn-primary">Search!</a>
+                        </div>
 
                     </div>
 
@@ -167,44 +156,57 @@
             </div>
             <!-- Card 2 -->
 
-            <div class="col">
-                <!-- Card 3 -->
-                <div class="card">
+            @{ if (User.Identity.IsAuthenticated) {
+                <div class="col align-items-stretch d-flex">
+                    <!-- Card 3 -->
+                    <div class="card align-items-stretch d-flex">
+                        <!-- Card image -->
+                        <a asp-controller="User" asp-action="AccountInformation"></a><img width="100rem" height="160rem" class="card-img-top" src="data:image/jpg;base64, @Convert.ToBase64String(@Model.Image)" alt="Card image cap">
 
-                    <!-- Card image -->
-                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                        <!-- Card content -->
+                        <div class="card-body text-center">
+                            <!-- Title -->
+                            <h4 class="card-title"><a>@user.FirstName @user.LastName</a></h4>
+                            <!-- Text -->
+                            <p class="card-text">Welcome!</p>
+                            <!-- button &apos; -->
+                            <div class="row justify-content-center">
+                                <a asp-controller="User" asp-action="AccountInformation" class="button btn btn-primary">Go to your account</a>
+                            </div>
 
-                    <!-- Card content -->
-                    <div class="card-body">
-                        @{
-                            if (User.Identity.IsAuthenticated)
-                            {
-                                <a class="dropdown-item waves-light" asp-controller="User" asp-action="AccountInformation"><i class="fa fa-vcard" aria-hidden="true"></i> Account Information</a>
-                                <div class="divider dropdown-divider"></div>
-                                <a class="dropdown-item waves-light" asp-controller="User" asp-action="LogOut"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
-                            } else {
-                                <!-- Title -->
-                                <h4 class="card-title"><a>Your profile</a></h4>
-                                <!-- Text -->
-                                <p class="card-text">You need to be logged in to go to profile</p>
-                                <!-- button &apos; -->
+                        </div>
+                    </div>
+                </div>
+
+            } else {
+
+                <div class="col align-items-stretch d-flex">
+                <!-- Card 2 -->
+                    <div class="card align-items-stretch d-flex">
+
+                        <!-- Card image -->
+                        <a asp-controller="User" asp-action="Login"></a><img width="100rem" height="160rem" class="card-img-top" src="~/images/default_pic.jpg" alt="Card image cap">
+
+                        <!-- Card content -->
+                        <div class="card-body text-center">
+
+                            <!-- Title -->
+                            <h4 class="card-title"><a>User Profile</a></h4>
+                            <!-- Text -->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card&apos;s content.</p>
+                            <!-- Button -->
+                            <div class="row justify-content-center">
                                 <a asp-controller="User" asp-action="Login" class="btn btn-primary">Sign In</a>
                                 <a asp-controller="User" asp-action="SignUp" class="btn btn-primary">Sign Up</a>
-                            }
-                        }
-                        
-                        
+                            </div>
+
+                        </div>
 
                     </div>
-
                 </div>
-                <!-- Card 3-->
-            </div>
+            } }
+
         </div>
-
-        </section>
-        <!--Section: Buttons-->
-
     </div>
 </main>
 <!--Main layout-->
