--- a/Views/User/EditSippingBilling.cshtml
+++ b/Views/User/EditSippingBilling.cshtml
@@ -198,8 +198,9 @@
 
                             <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingCountry"></span>
                             <label asp-for="ShippingCountry">Country</label>
-                            <input asp-for="ShippingCountry" type="text" id="ShippingCountry" class="form-control validate" required>
-
+                            <select class="mdb-select colorful-select dropdown-primary validate" asp-for="ShippingCountry"  id="ShippingCountry" searchable="Search here..">
+                                <option id="ShippingCountrySelect" value="" disabled selected>Choose your country</option>
+                            </select>
                         </div>
                         <!-- Shipping Information -->
 
@@ -238,7 +239,9 @@
 
                             <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCountry"></span>
                             <label asp-for="BillingCountry">Country</label>
-                            <input asp-for="BillingCountry" type="text" id="BillingCountry" class="form-control validate billing-information" required>
+                            <select class="mdb-select colorful-select dropdown-primary validate" asp-for="BillingCountry"  id="BillingCountry" searchable="Search here..">
+                                <option value="" disabled selected>Choose your country</option> 
+                            </select>    
                         </div>
                         <!-- Billing Information -->
                     </div>
