--- a/Views/Shared/_footer.cshtml
+++ b/Views/Shared/_footer.cshtml
@@ -10,13 +10,10 @@
                 <h5 class="text-uppercase mb-4 font-weight-bold">company</h5>
                 <ul class="list-unstyled">
                     <p>
-                        <a href="#!">Contact us</a>
+                        <a class="text-success font-weight-bold" asp-controller="Home" asp-action="ContactUs">Contact us</a>
                     </p>
                     <p>
-                        <a href="#!">About us</a>
-                    </p>
-                    <p>
-                        <a href="#!">Site map</a>
+                        <a class="text-success font-weight-bold" asp-controller="Home" asp-action="AboutUs">About us</a>
                     </p>
                 </ul>
             </div>
@@ -28,16 +25,13 @@
                 <h5 class="text-uppercase mb-4 font-weight-bold">About</h5>
                 <ul class="list-unstyled">
                     <p>
-                        <a href="#!">PROJECTS</a>
+                        <a class="text-success font-weight-bold" asp-controller="User" asp-action="TermsAndConditions">Terms & Conditions</a>
                     </p>
                     <p>
-                        <a href="#!">Terms & Agreements</a>
+                        <a class="text-success font-weight-bold" asp-controller="Home" asp-action="Help">Help</a>
                     </p>
                     <p>
-                        <a href="#!">Help</a>
-                    </p>
-                    <p>
-                        <a href="#!">F.A.Q.</a>
+                        <a class="text-success font-weight-bold" asp-controller="Home" asp-action="Faq">F.A.Q.</a>
                     </p>
                 </ul>
             </div>
