--- a/Views/User/TermsAndConditions.cshtml
+++ b/Views/User/TermsAndConditions.cshtml
@@ -14,7 +14,7 @@
             <li>Though a book is displayed on our website doesn't mean it exists</li>
         </ul>
 
-        <a asp-controller="User" asp-action="SignUp" type="button" class="btn btn-default btn-lg btn-block mt-1 mb-1">Back to sign up page</a>
+        <a asp-controller="User" asp-action="SignUp" type="button" class="btn btn-default btn-lg btn-block mt-1 mb-1">Go to Sign Up page</a>
     </div>
 
 </div>
