Facebook button in footer will redirect you to our facebook page

--- a/Views/Shared/_footer.cshtml
+++ b/Views/Shared/_footer.cshtml
@@ -55,7 +55,7 @@
                 <!--Social buttons-->
                 <div class="mt-2">
                     <!--Facebook-->
-                    <a type="button" class="btn-floating btn-small btn-fb">
+                    <a href="https://www.facebook.com/thebookcave1/" type="button" class="btn-floating btn-small btn-fb">
                           <i class="fa fa-facebook"></i>
                       </a>
                     <!--Twitter-->
