cart to checkout takki virkur

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -54,7 +54,8 @@
     </section>
     <div class="form-group">
         <h4 class="mt-2">Total: <strong><span id="total"></span> $</strong></h4>
-        <button type="button" class="btn btn-success waves-effect waves-light" id="completePurchase">Complete purchase</button>
+        
+        <a asp-controller="Checkout" asp-action="Index" class="btn btn-success waves-effect waves-light" id="completePurchase">Complete purchase</a>
         <button type="button" class="btn btn-primary waves-effect waves-light updateBtn">Update Cart</button>
     </div>
 </div>
