Push for viktor

--- a/Views/CheckOut/Index.cshtml
+++ b/Views/CheckOut/Index.cshtml
@@ -1,7 +1,7 @@
 @model BookCave.Models.InputModels.CheckOutInputModel
 
 <div class="container body-container pt-2">
-    <div id="toTop" class="steps-form-2">
+    <div id="toTop" class="steps-form-2 mt-3">
         <div class="steps-row-2 setup-panel-2 d-flex justify-content-between">
             <div class="steps-step-2">
                 <a href="#step-1" type="button" class="btn btn-amber btn-circle-2 waves-effect ml-0" data-toggle="tooltip" data-placement="top" title="Basic Information"><i class="fa fa-address-card" aria-hidden="true"></i></a>
