--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,7 +1,17 @@
 @model List<BookCave.Models.ViewModels.BookCartViewModel>
-<div class="container mt-5">
-    <button type="button" class="btn btn-danger waves-effect waves-light float-right mt-5" id="clearAll">Clear Cart</button>
-    <button type="button" class="btn btn-primary waves-effect waves-light float-right mt-5 updateBtn">Update Cart</button>
+<div class="container body-container card">
+
+    <div class="row mt-3">
+        <div class="col">
+            <h1 class="text-center display-3"><strong>Cart</strong></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <button type="button" class="btn btn-danger waves-effect waves-light pull-right" id="clearAll">Clear Cart</button>
+            <button type="button" class="btn btn-primary waves-effect waves-light updateBtn pull-right">Update Cart</button>
+        </div>
+    </div>
     <section class="section my-5">
         <div class="table-responsive">
             <table class="table product-table text-center">
@@ -53,9 +63,9 @@
         </div>
     </section>
     <div class="form-group">
-        <h4 class="mt-2">Total: <strong><span id="total"></span> $</strong></h4>
+        <h4 class="mt-2">Total: $ <strong><span id="total">0.00</span> </strong></h4>
         
-        <a asp-controller="Checkout" asp-action="Index" class="btn btn-success waves-effect waves-light" id="completePurchase">Complete purchase</a>
+        <button class="btn btn-success waves-effect waves-light" id="completePurchase">Complete purchase</button>
         <button type="button" class="btn btn-primary waves-effect waves-light updateBtn">Update Cart</button>
     </div>
 </div>
