--- a/Views/Manage/AddAuthor.cshtml
+++ b/Views/Manage/AddAuthor.cshtml
@@ -6,7 +6,7 @@
             <h4 class="h2 mb-0">Add Author</h4>
         </div>
         <div class="card-body ">
-            <form asp-action="AddAuthor" asp-controller="Manage" method="POST" class="my-5">
+            <form id="addAuthorForm" asp-action="AddAuthor" asp-controller="Manage" method="POST" class="my-5">
 
                 <span class="mr-5 font-weight-light text-danger" asp-validation-for="Name"></span>
                 <div class="form-group row d-flex">
@@ -17,8 +17,8 @@
                 </div>
 
                 <div class="text-right mb-5">
-                    <a asp-action="Index" asp-controller="Manage" class="btn btn-danger waves-light">Cancel</a>
-                    <input type="submit" class="btn success-color-dark waves-light" value="Add Author!">
+                    <a onclick="window.top.close()" class="btn btn-danger waves-light">Cancel</a>
+                    <input id="addAuthor" type="button" class="btn success-color-dark waves-light" value="Add Author!">
                 </div>
 
             </form>
