--- a/Views/Manage/AddGenre.cshtml
+++ b/Views/Manage/AddGenre.cshtml
@@ -7,18 +7,19 @@
         </div>
         <div class="card-body ">
 
-            <form asp-action="AddGenre" asp-controller="Manage" method="POST">
+            <form id="addGenreForm" asp-action="AddGenre" asp-controller="Manage" method="POST">
 
                 <span class="mr-5 font-weight-light text-danger" asp-validation-for="Name"></span>
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Genre Name</p>
+                <div class="form-group row d-flex form-control-lg">
+                    <p class="label col-md-4 pt-2 ">Genre Name</p>
                     <div class="col-md-8">
-                        <input asp-for="Name" class="form-control pt-0" id="Title" type="text">
+                        <input asp-for="Name" class="form-control form-control-lg t-0" id="Title" type="text">
                     </div>
                 </div>
 
-                <div>
-                    <input type="submit">
+                <div class="pull-right">
+                    <a onclick="window.top.close()" class="btn btn-danger waves-light">Cancel</a>
+                    <input id="addGenre" type="button" class="btn success-color-dark waves-light" value="Add publisher!">
                 </div>
 
             </form>
