server crash preventions

--- a/Views/Home/Faq.cshtml
+++ b/Views/Home/Faq.cshtml
@@ -22,6 +22,31 @@
                 <p>Yes you can! After logging in you can go to account information where yo can edit your name and it will be saved.</p>
                 <p>Note that the e-mail that you provided in the <a class="text-success font-weight-bold" asp-controller="User" asp-action="SignUp">signup</a> phase is not changable as of yet, this feature will be implemented soon!</p>
             </li>
+
+            <li>
+                <p class="font-weight-bold">Can I add a change my password</p>
+                <p>Yes! Go to account information and and select change password from the table below your profile picture. You will then be promted to input your old password as well as a new one.</p>
+            </li>
+
+            <li>
+                <p class="font-weight-bold">Can I have a favorite book?</p>
+                <p>Yes you can! You can select a book and view it's details. From there you can press a button to add that book to your favorities.</p>
+                <p>After that you can go to account information and press My Favorite Book from the table below your profile image. Your favorite book will then be showed.</p>
+                <p>Note that if you haven't added a favorite book you will only see a error that say's that your book couldn't be retrieved. This can be because our server is down or you havn't selected a favorite book yet.</p>
+            </li>
+
+            <li>
+                <p class="font-weight-bold">Can I view my shipping and billing information?</p>
+                <p>Yes! In account information, select Change/Billing Information. This will bring you to another webpage where you can view your saved billing and shipping information.</p>
+                <p>If you havn't filled in your information beforehand the tables will not show anything.</p>
+                <p>From this page you can select Update Shipping/Billing. You will be promted to fill in your information and after pressing submit your input will be saved in our database. The tables at the bottom of the page will be filled out as well</p>
+            </li>
+
+            <li>
+                <p class="font-weight-bold">Can I see my previous transactions</p>
+                <p>Yes you can! Go to account information, select Oder History and there you will see a list of all your orders. From there you can select a single order, view it and print it out.</p>
+                <p>If you have no orders a message will appear that will let you know that you have none. From there you can view all books or go back to account.</p>
+            </li>
         </ol>
         
 
