--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>@ViewBag.PageTitle</title>
+    <title>Management - Book Cave</title>
 
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="~/lib/mdb/css/bootstrap.min.css" />
