--- a/Views/User/OrderHistory.cshtml
+++ b/Views/User/OrderHistory.cshtml
@@ -5,6 +5,7 @@
         {
             <h1 class="text-center mt-5 mb-5">You have no orders ...</h1>
             <h3 class="text-center mt-5 mb-5">Go shopping! ...</h3>
+            <a asp-controller="Home" asp-action="Index" type="button" class="btn btn-default btn-lg btn-block mt-1 mb-1">Go to home page</a>
         }
         else
         {
